# OpenNeuroStudies

./: .bidsignore  .gitignore  .gitmodules  CHANGES  CITATION.cff  CLAUDE.md  Makefile  README.md  TODO.md  dataset_description.json  studies+derivatives.json  studies+derivatives.tsv  studies.json  studies.tsv  studies_derivatives.json  studies_derivatives.tsv
.datalad/: config
.duct/logs/: 2025.10.08T23.33.14-1771198_info.json  2025.10.08T23.33.14-1771198_stdout  2025.10.08T23.33.14-1771198_usage.json  2026.02.20T20.31.39-2131421_info.json  2026.02.20T20.31.39-2131421_stderr  2026.02.20T20.31.39-2131421_stdout  2026.02.20T20.31.39-2131421_usage.jsonl  2026.02.20T20.32.10-2132137_info.json  2026.02.20T20.32.10-2132137_stdout  2026.02.20T20.32.10-2132137_usage.jsonl  2026.02.22T23.12.22-615262_info.json  2026.02.22T23.12.22-615262_stderr  2026.02.22T23.12.22-615262_stdout  2026.02.22T23.12.22-615262_usage.jsonl  2026.03.10T08.53.46-311386_info.json  2026.03.10T08.53.46-311386_stdout  2026.03.10T08.53.46-311386_usage.jsonl  2026.03.10T08.54.50-313054_info.json  2026.03.10T08.54.50-313054_usage.jsonl  2026.03.10T08.56.14-315315_info.json  2026.03.10T08.56.14-315315_stdout  2026.03.10T08.56.14-315315_usage.jsonl
.openneuro-studies/: cleanup-github-studies.sh  config.yaml  test-discover.sh
.openneuro-studies.aside/: .gitignore  TODO-unorganized-tracking.md
.specify/commands/: openneuro-studies.release.md
.specify/memory/: constitution.md
code/: .gitignore  README.md  pyproject.toml  tox.ini
code/.openneuro-studies/: config.yaml
code/scripts/: analyze_extraction_quality.py  summarize_extraction_errors.py
code/snakemake-plugins/snakemake-fsspec-resolver-gitannex/: pyproject.toml
code/snakemake-plugins/snakemake-fsspec-resolver-gitannex/snakemake_fsspec_resolver_gitannex/: __init__.py  resolver.py
code/snakemake-plugins/snakemake-storage-plugin-fsspec/: pyproject.toml
code/snakemake-plugins/snakemake-storage-plugin-fsspec/snakemake_storage_plugin_fsspec/: __init__.py  provider.py  resolver.py
code/src/bids_studies/: __init__.py  error_classification.py  error_tracking.py  exceptions.py  retry.py
code/src/bids_studies/extraction/: __init__.py  dataset.py  derivative.py  raw_metadata.py  study.py  subject.py  tsv.py
code/src/bids_studies/schemas/: __init__.py  derivatives+datasets.json
code/src/bids_studies/sparse/: __init__.py  access.py
code/src/bids_studies/subdatasets/: __init__.py
code/src/bids_studies/utils/: __init__.py
code/src/openneuro_studies/: __init__.py
code/src/openneuro_studies/cli/: __init__.py  discover.py  errors.py  init.py  main.py  migrate.py  organize.py  provision.py  publish.py  unpublish.py
code/src/openneuro_studies/config/: __init__.py  loader.py  models.py
code/src/openneuro_studies/discovery/: __init__.py  dataset_finder.py
code/src/openneuro_studies/lib/: __init__.py  datalad_utils.py  error_classification.py  error_tracking.py  exceptions.py  fuse_mount.py  retry.py  sparse_access.py  subdataset_manager.py
code/src/openneuro_studies/metadata/: __init__.py  dataset_description.py  derivative_extractor.py  hierarchical_extractor.py  studies_derivatives_tsv.py  studies_plus_derivatives_tsv.py  studies_tsv.py  summary_extractor.py
code/src/openneuro_studies/models/: __init__.py  derivative.py  publication.py  source.py  study.py  unorganized.py
code/src/openneuro_studies/organization/: __init__.py  locks.py  study_creator.py  submodule_linker.py  unorganized_tracker.py
code/src/openneuro_studies/provision/: __init__.py  provisioner.py
code/src/openneuro_studies/provision/templates/study/: README.md.jinja  copier.yaml
code/src/openneuro_studies/provision/templates/study/.openneuro-studies/: template-version.jinja
code/src/openneuro_studies/publishing/: __init__.py  github_publisher.py  status_tracker.py  sync.py
code/src/openneuro_studies/utils/: __init__.py  github_client.py
code/src/openneuro_studies/validation/: __init__.py  bids_validator.py
code/tests/: conftest.py  test-expectations.sh
code/tests-adhoc/: analyze_extraction_state.py  test_e2e.py  test_extraction_manual.py  test_fsspec_blocksize.py
code/tests/integration/: test_derivative_extraction.py  test_discover_organize_workflow.py  test_extraction_with_subdatasets.py  test_fuse_mount.py  test_provision_copier.py  test_workflow.py
code/tests/unit/: test_bids_subdatasets.py  test_config.py  test_derivative_extractor.py  test_discover_update_mode.py  test_error_tracking.py  test_errors_cli.py  test_exceptions.py  test_github_client.py  test_hierarchical_extraction.py  test_humanized_size_parsing.py  test_include_related.py  test_migrate.py  test_missing_fields.py  test_models.py  test_provision.py  test_publishing.py  test_retry.py  test_subdataset_manager.py  test_tsv_json_escaping.py  test_unorganized_tracker.py  test_workflow_git_utils.py  test_workflow_provenance.py
code/workflow/: README.md  Snakefile
code/workflow/lib/: __init__.py  git_utils.py  provenance.py
code/workflow/scripts/: clean_provenance.py
doc/: spec-compliance-analysis.md
doc/designs/: 20251218-provision-idea.txt  20251218-spec-code-alignment-plan.md  20251218-studies-tsv-summary-columns.md  20251226-bids-studies-subproject.md  20251226-hierarchical-stats-extraction.md  20260217-dependency-tracking-and-snakemake.md  20260309-review-metadataprop-recompute.md  20260310-diagnosis.md  20260310-plan-fix.md  20260310-subdataset-init-bug.md  20260314-imaging-stage-duplication.md  20260321-subdataset-installation-error-handling.md  20260322-hierarchical-error-tracking.md  20260323-error-tracking-implementation.md  20260323-github-repository-descriptions.md  20260323-refactor-error-analysis-to-cli.md  20260323-specification-analysis.md  20260326-debug-analyze-quality-tests.md  20260408-fix-sparse-access-s3-urls.md  (+2 more)
scripts/: openneuro_datasets_todo.tsv.example  process_openneuro_todo.sh
sourcedata/: openneuro-derivatives-prediction-all-included-datasets.tsv  openneuro-graphql.tsv
(+31 files in other folders)
