[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snakemake-fsspec-resolver-gitannex"
version = "0.1.0"
description = "git-annex URL resolver for snakemake-storage-plugin-fsspec"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenNeuro", email = "support@openneuro.org" }
]
keywords = [
    "snakemake",
    "git-annex",
    "datalad",
    "resolver",
    "fsspec",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "snakemake-storage-plugin-fsspec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/OpenNeuroOrg/snakemake-fsspec-resolver-gitannex"
Repository = "https://github.com/OpenNeuroOrg/snakemake-fsspec-resolver-gitannex"

[tool.hatch.build.targets.wheel]
packages = ["snakemake_fsspec_resolver_gitannex"]
