[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snakemake-storage-plugin-fsspec"
version = "0.1.0"
description = "Snakemake storage plugin using fsspec for transparent remote file access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenNeuro", email = "support@openneuro.org" }
]
keywords = [
    "snakemake",
    "storage",
    "plugin",
    "fsspec",
    "remote",
    "streaming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "snakemake-interface-storage-plugins>=3.0.0",
    "fsspec>=2023.1.0",
    "aiohttp",  # for async HTTP
]

[project.optional-dependencies]
s3 = ["s3fs"]
gcs = ["gcsfs"]
all = ["s3fs", "gcsfs"]
dev = [
    "pytest",
    "pytest-asyncio",
    "snakemake>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/OpenNeuroOrg/snakemake-storage-plugin-fsspec"
Repository = "https://github.com/OpenNeuroOrg/snakemake-storage-plugin-fsspec"

[project.entry-points."snakemake.storage_plugins"]
fsspec = "snakemake_storage_plugin_fsspec:StorageProvider"

[tool.hatch.build.targets.wheel]
packages = ["snakemake_storage_plugin_fsspec"]
